# athena-create-table-cur

./: .flake8  .gitignore  Pipfile  README.md  create_ddl.py  main.py  pyproject.toml
template/: ddl.hql.j2  ddl_create_table.hql.j2  ddl_create_view.hql.j2  ddl_drop_table.hql.j2
