[project]
name = "athena-create-table-cur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.33.13",
    "jinja2>=3.1.4"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py37"
line-length = 119

[tool.ruff.lint]
ignore = [
]

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
]
